@@ -3281,7 +3281,7 @@ setRlibs <-
         if (!extra_arch &&
             file.exists(file.path(pkgdir, "NAMESPACE"))) {
             checkingLog(Log, "package namespace information")
-            tryCatch(parseNamespaceFile(basename(pkgdir),
+            ns <- tryCatch(parseNamespaceFile(basename(pkgdir),
                                               dirname(pkgdir)),
                      error = function(e) {
                          errorLog(Log)
@@ -3294,7 +3294,13 @@ setRlibs <-
                          wrapLog(msg_NAMESPACE)
                          do_exit(1L)
                      })
-            resultLog(Log, "OK")
+            nS3methods <- nrow(ns$S3methods)
+            if (nS3methods > 500L) {
+                msg <- sprintf("R < 3.0.2 had a limit of 500 registered S3 methods: found %d",
+                               nS3methods)
+                noteLog(Log, msg)
+            } else
+                resultLog(Log, "OK")
         }
 
         checkingLog(Log, "package dependencies")
